# yahtzee-solver

./: .gitignore  CMakeLists.txt  Makefile  README.md  yahtzee_rules.md
.github/workflows/: ci.yml
src/: CMakeLists.txt  main.cpp
src/calculator/: calculator.cpp  calculator.h
src/game_state/: category.h  dice.cpp  dice.h  game_state.cpp  game_state.h  game_state_utils.h  short_game_state.cpp  short_game_state.h
src/move/: move.cpp  move.h  move_outcome.cpp  move_outcome.h
tests/: CMakeLists.txt  test_calculator_add.cpp  test_calculator_subtract.cpp  test_dice.cpp  test_game_state.cpp  test_math.cpp  test_move.cpp  test_move_outcome.cpp  test_short_game_state.cpp
